--- a/CSS/Calendar.css
+++ b/CSS/Calendar.css
@@ -2,7 +2,9 @@ body {
     background-color: black;
 }
 
-
+.col-md-4 {
+    height: 650px; /* Adjust the height as needed to control the height of row - allows everythign to fit so there are 3 squares on each row*/
+}
 
 /* controls the color of text on custom buttons */
 .custom-btn {
@@ -112,11 +114,6 @@ p {
 
 .your-band {
     margin-bottom: -250px;
-}
-
-/* On small screens, set height to 'auto' for sidenav and grid */
-@media screen and (max-width: 767px) {
-    .row.content {height:auto;}
 }
 
 /* Breakpoint 1 Based on iPhone 12*/
