--- a/CSS/Calendar.css
+++ b/CSS/Calendar.css
@@ -1,9 +1,10 @@
+
 body {
     background-color: black;
 }
 
 .col-md-4 {
-    height: 650px; /* Adjust the height as needed to control the height of row - allows everythign to fit so there are 3 squares on each row*/
+    height: 400px; /* Adjust the height as needed to control the height of row - allows everything to fit so there are 3 squares on each row*/
 }
 
 /* controls the color of text on custom buttons */
@@ -31,6 +32,10 @@ footer {
 
 .friday {
     margin-top: 30px; /* this will adjust the top of the picture and align w/ text */
+}
+
+.full.calendar {
+    margin-top: 10px;
 }
 
 /* Added h2, this changes the h2 tags of the page JJE 2.1.24 */
@@ -91,7 +96,7 @@ p {
 
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
 .row.content {
-    height: 100%;
+    height: 550px;
 }
 
 .text-center {
@@ -104,6 +109,10 @@ p {
 
 .two {
     height: 800px;
+}
+
+.upcoming {
+    height: 100px;
 }
 
 /* Controls the background and font color for top left box */
@@ -120,169 +129,169 @@ p {
 /* Code below controls the changes made on mobile devices */
 @media screen and (max-width: 390px) {
 
-.col-md-4 {
-    height: auto; /* Adjust the height as needed */
-}
-  
-.custom-btn {
-     margin-top: 5px;
-     font-size: 20pt;
-}
+    .col-md-4 {
+        height: auto; /* Adjust the height as needed */
+    }
 
-.email {
-     margin-left: -50px;
-}
+    .custom-btn {
+        margin-top: 5px;
+        font-size: 20pt;
+    }
 
-footer {
-     padding-top: 20px;
-     padding-bottom: 20px;
-}
+    .email {
+        margin-left: -50px;
+    }
 
-h2 {
-     font-size: 20pt;
-     line-height: 20pt;
-}
+    footer {
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
 
-h3 {
-     font-size: 18pt;
-     line-height: 4pt;
-}
+    h2 {
+        font-size: 20pt;
+        line-height: 20pt;
+    }
 
-.list-unstyled {
-     align-content: center;
-}
+    h3 {
+        font-size: 18pt;
+        line-height: 4pt;
+    }
 
-.mobile-logo {
-     width: 150px;
-     height: 150px;
-     margin-bottom: 120px;
-     margin-right: -100px;
-}
+    .list-unstyled {
+        align-content: center;
+    }
 
-.mobile-mission {
-     margin-top: -70px;
-}
+    .mobile-logo {
+        width: 150px;
+        height: 150px;
+        margin-bottom: 120px;
+        margin-right: -100px;
+    }
 
-.navbar-brand img {
-     width: 150px; /* Controls the width of the logo */
-     height: 40px; /* Controls the height of the logo */
-     margin-left: 20px; /* Moves the logo from left to right */
-}
+    .mobile-mission {
+        margin-top: -70px;
+    }
 
-.navbar {
-     font-size: 18pt;
-}
+    .navbar-brand img {
+        width: 150px; /* Controls the width of the logo */
+        height: 40px; /* Controls the height of the logo */
+        margin-left: 20px; /* Moves the logo from left to right */
+    }
 
-.never-know {
-     margin-bottom: 90px;
-     margin-top: -20px;
-}
+    .navbar {
+        font-size: 18pt;
+    }
 
-p {
-     color: white;
-     font-size: 16pt;
-     line-height: 18pt;
-}
+    .never-know {
+        margin-bottom: 90px;
+        margin-top: -20px;
+    }
 
-.p-3 {
-     margin-top: 10px;
-}
+    p {
+        color: white;
+        font-size: 16pt;
+        line-height: 18pt;
+    }
 
-.row.content {
-     height: auto;
-}
+    .p-3 {
+        margin-top: 10px;
+    }
 
-.rounded-circle {
-     margin-bottom: 100px;
-     margin-left:5pt;
-}
+    .row.content {
+        height: auto;
+    }
 
-.show-1 {
-    margin-bottom: 0px;
-    margin-top: 0px;
-}
+    .rounded-circle {
+        margin-bottom: 100px;
+        margin-left:5pt;
+    }
 
-.show-2 {
-    margin-bottom: 0px;
-    margin-top: 10px; /* This creates the small space above button on show, same for each following show */
-}
+    .show-1 {
+        margin-bottom: 0px;
+        margin-top: 0px;
+    }
 
-.show-3 {
-    margin-bottom: 0px;
-    margin-top: 10px;
-}
-  
-.show-4 {
-    margin-bottom: 0px;
-    margin-top: 10px;
-}
+    .show-2 {
+        margin-bottom: 0px;
+        margin-top: 10px; /* This creates the small space above button on show, same for each following show */
+    }
 
-.show-5 {
-    margin-bottom: 0px;
-    margin-top: 10px;
-}
+    .show-3 {
+        margin-bottom: 0px;
+        margin-top: 10px;
+    }
 
-.show-6 {
-    margin-bottom: 0px;
-    margin-top: 10px;
-}
-  
-.show-7 {
-    margin-bottom: 0px;
-    margin-top: 10px;
-}
-  
-.show-8 {
-    margin-bottom: 0px;
-    margin-top: 10px;
-}
-  
-.show-9 {
-    margin-bottom: 0px;
-    margin-top: 10px;
-}
-  
-.show-10 {
-    margin-bottom: 0px;
-    margin-top: 10px;
-}
-  
-.show-11 {
-    margin-bottom: 0px;
-    margin-top: 10px;
-}
-  
-.show-12 {
-    margin-bottom: 0px;
-    margin-top: 10px;
-}
-  
-.show-13 {
-    margin-bottom: 0px;
-    margin-top: 10px;
-}
-  
-.show-14 {
-    margin-bottom: 0px;
-    margin-top: 10px;
-}
-  
-.show-15 {
-    margin-bottom: 0px;
-    margin-top: 10px;
-}
+    .show-4 {
+        margin-bottom: 0px;
+        margin-top: 10px;
+    }
 
-.social {
-    margin-top: -30px;
-}
+    .show-5 {
+        margin-bottom: 0px;
+        margin-top: 10px;
+    }
 
-.upcoming {
-    margin-top: -20px;
-}
+    .show-6 {
+        margin-bottom: 0px;
+        margin-top: 10px;
+    }
 
-.your-band {
-    margin-bottom: 0px;
-    margin-top: 0px;
-}
+    .show-7 {
+        margin-bottom: 0px;
+        margin-top: 10px;
+    }
+
+    .show-8 {
+        margin-bottom: 0px;
+        margin-top: 10px;
+    }
+
+    .show-9 {
+        margin-bottom: 0px;
+        margin-top: 10px;
+    }
+
+    .show-10 {
+        margin-bottom: 0px;
+        margin-top: 10px;
+    }
+
+    .show-11 {
+        margin-bottom: 0px;
+        margin-top: 10px;
+    }
+
+    .show-12 {
+        margin-bottom: 0px;
+        margin-top: 10px;
+    }
+
+    .show-13 {
+        margin-bottom: 0px;
+        margin-top: 10px;
+    }
+
+    .show-14 {
+        margin-bottom: 0px;
+        margin-top: 10px;
+    }
+
+    .show-15 {
+        margin-bottom: 0px;
+        margin-top: 10px;
+    }
+
+    .social {
+        margin-top: -30px;
+    }
+
+    .upcoming {
+        margin-top: -20px;
+    }
+
+    .your-band {
+        margin-bottom: 0px;
+        margin-top: 0px;
+    }
 
 } /* Closes Breakpoint 1 Based on iPhone 12*/
