--- a/CSS/Calendar.css
+++ b/CSS/Calendar.css
@@ -4,7 +4,7 @@ body {
 }
 
 .col-md-4 {
-    height: 400px; /* Adjust the height as needed to control the height of row - allows everything to fit so there are 3 squares on each row*/
+    height: auto /* Adjust the height as needed to control the height of row - allows everything to fit so there are 3 squares on each row*/
 }
 
 /* controls the color of text on custom buttons */
@@ -12,6 +12,7 @@ body {
     background-color: #627561; /* Replace with your desired initial button color */
     color: #ffffff; /* Text color (white in this example) */
     transition: background-color 0.3s ease; /* Smooth transition effect */
+    margin-bottom: 10px;
 }
 
 /* controls the color of hover on custom buttons */
@@ -96,7 +97,11 @@ p {
 
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
 .row.content {
-    height: 550px;
+    height: 100%;
+}
+
+.row.content.top {
+    height: 10px;
 }
 
 .text-center {
@@ -122,7 +127,7 @@ p {
 }
 
 .your-band {
-    margin-bottom: -250px;
+    margin-bottom: 10px;
 }
 
 /* Breakpoint 1 Based on iPhone 12*/
