--- a/CSS/Contact.css
+++ b/CSS/Contact.css
@@ -153,7 +153,7 @@ p {
     }
 
     .email {
-        margin-left: -50px;
+        margin-left: -40px;
     }
 
     footer {
@@ -207,13 +207,12 @@ p {
     }
 
     .show-1 {
-        margin-bottom: 20px;
-        margin-top: 20px;
+        margin-bottom: -80px;
+        margin-top: 25px;
     }
 
     .show-2 {
-        margin-bottom: 20px;
-        margin-top: 20px;
+        padding-top: 100px;
     }
 
     .never-know {
@@ -238,3 +237,50 @@ p {
     }
 
 }
+
+/* Breakpoint 2 Based on iPhone 15*/
+/* Code below controls the changes made on mobile devices */
+@media screen and (min-width: 391px) and (max-width: 480px) {
+
+    .custom-btn {
+        margin-top: 5px;
+        font-size: 20pt;
+    }
+
+    .contact-info {
+        margin-left: 25px;
+    }
+
+    .mobile-logo {
+        width: 150px;
+        height: 150px;
+        margin-bottom: 120px;
+        margin-right: -200px;
+    }
+
+    .navbar-brand img {
+        width: 150px; /* Controls the width of the logo */
+        height: 40px; /* Controls the height of the logo */
+        margin-left: 20px; /* Moves the logo from left to right */
+    }
+
+    p {
+        color: white;
+        font-size: 16pt;
+        line-height: 18pt;
+    }
+
+    .show-1 {
+        margin-bottom: -80px;
+        margin-top: 25px;
+    }
+
+    .show-2 {
+        padding-top: 100px;
+    }
+
+    .never-know {
+        padding-top: 10px;
+    }
+
+} /* Closes Breakpoint 2 Based on iPhone 15*/
