--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -112,7 +112,7 @@ p {
     }
 
     .email {
-        margin-left: -50px;
+        margin-left: -40px;
     }
 
     footer {
@@ -190,3 +190,50 @@ p {
     }
 
 }
+
+/* Breakpoint 2 Based on iPhone 15*/
+/* Code below controls the changes made on mobile devices */
+@media screen and (min-width: 391px) and (max-width: 480px) {
+
+    .custom-btn {
+        margin-top: 5px;
+        font-size: 20pt;
+    }
+
+    .contact-info {
+        margin-left: 25px;
+    }
+
+    h2 {
+        font-size: 20pt;
+        line-height: 20pt;
+    }
+
+    h3 {
+        font-size: 18pt;
+        line-height: 4pt;
+    }
+
+    .mobile-logo {
+        width: 150px;
+        height: 150px;
+        margin-bottom: 120px;
+        margin-right: -200px;
+    }
+
+    .navbar-brand img {
+        width: 150px; /* Controls the width of the logo */
+        height: 40px; /* Controls the height of the logo */
+        margin-left: 20px; /* Moves the logo from left to right */
+    }
+
+    p {
+        color: white;
+        font-size: 16pt;
+        line-height: 18pt;
+    }
+
+    .row.content {
+        height:auto;}
+
+} /* Closes Breakpoint 2 Based on iPhone 15*/
