--- a/CSS/Store.css
+++ b/CSS/Store.css
@@ -125,7 +125,7 @@ p {
     }
 
     .email {
-        margin-left: -50px;
+        margin-left: -40px;
     }
 
     footer {
@@ -165,7 +165,7 @@ p {
     .navbar-brand img {
         width: 150px; /* Controls the width of the logo */
         height: 40px; /* Controls the height of the logo */
-        margin-left: 20px; /* Moves the logo from left to right - increasing number moves logo to the right */
+        margin-left: 35px; /* Moves the logo from left to right */
     }
 
     .navbar {
@@ -216,3 +216,72 @@ p {
     }
 
 }
+
+/* Breakpoint 2 Based on iPhone 15*/
+/* Code below controls the changes made on mobile devices */
+@media screen and (min-width: 391px) and (max-width: 480px) {
+
+    .art-button {
+        margin-bottom: 20px;
+    }
+
+    .bag {
+        margin-bottom: 20px;
+    }
+
+    .custom-btn {
+        margin-top: 5px;
+        font-size: 20pt;
+    }
+
+    .contact-info {
+        margin-left: 25px;
+    }
+
+    .hoodie {
+        margin-bottom: 20px;
+    }
+
+    h2 {
+        font-size: 20pt;
+        line-height: 20pt;
+    }
+
+    h3 {
+        font-size: 18pt;
+        line-height: 4pt;
+    }
+
+    .mobile-logo {
+        width: 150px;
+        height: 150px;
+        margin-bottom: 120px;
+        margin-right: -200px;
+    }
+
+    .navbar-brand img {
+        width: 150px; /* Controls the width of the logo */
+        height: 40px; /* Controls the height of the logo */
+        margin-left: 20px; /* Moves the logo from left to right */
+    }
+
+    p {
+        color: white;
+        font-size: 16pt;
+        line-height: 18pt;
+    }
+
+    .show-1 {
+        margin-bottom: -80px;
+        margin-top: 25px;
+    }
+
+    .show-2 {
+        padding-top: 100px;
+    }
+
+    .never-know {
+        padding-top: 10px;
+    }
+
+} /* Closes Breakpoint 2 Based on iPhone 15*/
