--- a/CSS/About.css
+++ b/CSS/About.css
@@ -211,8 +211,7 @@ p {
     }
 
     .email {
-        margin-left: 50%;
-        margin-right: 50%;
+        margin-left: -20px;
     }
 
     h2 {
@@ -228,8 +227,8 @@ p {
     .mobile-logo {
         width: 150px;
         height: 150px;
-        margin-bottom: 50%;
-        margin-right: 50%;
+        margin-bottom: 120px;
+        margin-right: -150px;
     }
 
     .navbar-brand img {
