--- a/CSS/Calendar.css
+++ b/CSS/Calendar.css
@@ -314,6 +314,10 @@ p {
         margin-left: 25px;
     }
 
+    .email {
+        margin-left: -60px;
+    }
+
     h2 {
         font-size: 20pt;
         line-height: 20pt;
@@ -328,7 +332,7 @@ p {
         width: 150px;
         height: 150px;
         margin-bottom: 120px;
-        margin-right: -200px;
+        margin-right: -141px;
     }
 
     .navbar-brand img {
