--- a/CSS/Store.css
+++ b/CSS/Store.css
@@ -238,6 +238,10 @@ p {
         margin-left: 25px;
     }
 
+    .email {
+        margin-left: -60px;
+    }
+
     .hoodie {
         margin-bottom: 20px;
     }
@@ -256,7 +260,7 @@ p {
         width: 150px;
         height: 150px;
         margin-bottom: 120px;
-        margin-right: -200px;
+        margin-right: -141px;
     }
 
     .navbar-brand img {
