--- a/CSS/Store.css
+++ b/CSS/Store.css
@@ -85,7 +85,7 @@ p {
 
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
 .row.content {
-    height: 450px;
+    height: auto;
 }
 
 /* On small screens, set height to 'auto' for sidenav and grid */
